<resources>
    <string name="app_name">muzika</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="register_an_account">Register an account</string>
    <string name="creator">Creator</string>
    <string name="listener">Listener</string>
    <string name="placeholder">Placeholder Title</string>
    <string name="phdesc">Placeholder description</string>
    <string name="listen">Listen</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="searchbar">searchbar</string>
    <string name="new_song">New Song</string>
    <string name="submit">Submit</string>
    <string name="song_mp3">Song mp3</string>
    <string name="upload_your_music">Upload your music</string>
    <string name="add_song_description">Add song description</string>
    <string name="addsongname">Add song name</string>
    <string name="song_pic">Song pic</string>
    <string name="placeholderlikes">placeholderLikes</string>
    <string name="urltoyourimage">urltoyourimage</string>
    <string name="urltoyoursong">urltoyoursong</string>
    <string name="phlikeshere">phLikesHere</string>
    <string name="phlistenshere">phListensHere</string>
    <string name="authorherepls">AuthorHerePls</string>
    <string name="author">Author</string>
    <string name="placeholder_description_here">placeholder description here</string>
    <string name="title_here">Title Here</string>
    <string name="like">Like</string>
    <string name="play">Play</string>
    <string name="description">Description</string>
</resources>