<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".musicAdd">

    <EditText
        android:id="@+id/songname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleAddMenu" />

    <TextView
        android:id="@+id/titleAddMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/upload_your_music"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleAddDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:paddingTop="20dp"
        android:text="@string/add_song_description"
        app:layout_constraintBottom_toTopOf="@+id/descriptionSong"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/titlesongname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:paddingTop="20dp"
        android:text="@string/addsongname"
        app:layout_constraintBottom_toTopOf="@+id/descriptionSong"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.455" />

    <EditText
        android:id="@+id/descriptionSong"
        android:layout_width="315dp"
        android:layout_height="113dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songname" />

    <Button
        android:id="@+id/songpicbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:text="@string/song_pic"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="SelectPicture"
        app:layout_constraintTop_toBottomOf="@+id/descriptionSong" />

    <TextView
        android:id="@+id/mp3imageupload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/songpicbutton"
        app:layout_constraintTop_toBottomOf="@+id/descriptionSong" />

    <Button
        android:id="@+id/mp3uploadbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="24dp"
        android:text="@string/song_mp3"
        android:onClick="selectMp3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songpicbutton" />

    <TextView
        android:id="@+id/mp3url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text=""
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toEndOf="@+id/mp3uploadbutton"
        app:layout_constraintTop_toBottomOf="@+id/songpicbutton" />

    <Button
        android:id="@+id/submit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:ellipsize="middle"
        android:text="@string/submit"
        android:onClick="submitSong"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mp3uploadbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>